# JARVISv2

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .env_example  .gitignore  AGENTS.md  CHANGE_LOG.md  LICENSE  Makefile  Makefile.dev  Minimal_Local_AI_Assistant_PRD.md  Project.md  README.md  SYSTEM_INVENTORY.md  agent.md  assessment.txt  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  project_progress.md
Aider/: README.md  docker-compose.yaml  runbook.md
ClaudeAssist/: .gitignore  Makefile  claude.md  complete_setup.ps1  docker-compose.yaml  readme.md  start.bat  start.sh
ClaudeAssist/backend/: Cargo.toml  Dockerfile
ClaudeAssist/backend/src/: config.rs  config.yaml  database.rs  hardware.rs  main.rs  models.rs  ollama.rs
GeminiAssist/: README.md  docker-compose.yml  setup.sh
GrokAssistMMP/: README.md  docker-compose.yml
GrokAssistMMP/frontend/src-tauri/: Cargo.toml  main.rs  tauri.conf.json
GrokAssistMVP/: .env.hardware  README.md  grok.md  memory.json  run.py
OpenAiAssist/: README.md  docker-compose.yml  run_assistant.py
OpenHands/: README.md  docker-compose.yaml
QwenAssistant/: .env.example  .gitignore  CHECKLIST.md  DEPLOYMENT.md  FILE_STRUCTURE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  Makefile  PROJECT_PLAN.md  Project_Components.md  Project_Detail.md  QWEN.md  README.md  SERVICES_STARTUP.md  SUMMARY.md  TESTING.md  WARP.md  continue.md  docker-compose.yml
WarpAssistant/: .env_example  Makefile  README.md  warp.md
WarpAssistant/frontend/src-tauri/: Cargo.toml  tauri.conf.json
alt-dev/: CHANGES.md  DOCKER_DEPLOYMENT.md  FILES_REFERENCE.md  OPTION_A_COMPLETION_REPORT.md  QUICK_START.md  start_services.sh
backend/: Dockerfile  Dockerfile.dev  Dockerfile.prod  backend_requirements_marker.txt
docs/: README.md  index.md  script-reorganization.md  user-guide.md
frontend/: index.html  package-lock.json  package.json
models/: .gitkeep
scripts/: README.md  cleanup.ps1  cleanup.sh  deploy.ps1  deploy.sh  dev-setup.ps1  dev-setup.sh  dev.ps1  dev.sh  devtools-linux.md  devtools-windows.md  get-models.ps1  get-models.sh  main.ps1  main.sh  setup.ps1  setup.sh  smoke.ps1  voice_loop.py
(+201 files in other folders)
