[package]
name = "ai-assistant-backend"
version = "0.1.0"
edition = "2021"
authors = ["AI Assistant Team"]
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors", "trace", "compression-gzip", "compression-br", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "deflate"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tokio-util = "0.8"
sysinfo = "0.30"

[profile.release]
opt-level = 3