[package]
name = "local-ai-assistant"
version = "0.1.0"
description = "Local-first AI assistant"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = [ "api-all" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = "0.0.23"
nvml-wrapper = "0.10.0"
cpal = "0.15.3"
pv_porcupine = "3.0.3"
whisper-rs = "0.12.0"
tts = "0.25.6"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]